gui/3.6/admin-portal/management/user-management.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)[Next](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.6/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
      * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/map-data-to-graph)
      * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/load-data)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/write-queries)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.6/graphstudio/migrate-from-relational-database)
      * [Export And Import Solution](https://docs.tigergraph.com/gui/3.6/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.6/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/graphstudio/known-issues)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.6/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.6/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.6/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.6/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/README)
        * [Logs](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/log-viewer)
      * Management
        * [License](https://docs.tigergraph.com/gui/3.6/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
      * [Components](https://docs.tigergraph.com/gui/3.6/admin-portal/components/README)
        * [Nginx](https://docs.tigergraph.com/gui/3.6/admin-portal/components/nginx)
        * [RESTPP](https://docs.tigergraph.com/gui/3.6/admin-portal/components/restpp)
        * [GSQL](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gsql)
        * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gui)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.6/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso-aad)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.6/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.6/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/admin-portal/known-issues)


GraphStudio and Admin Portal 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * Admin Portal
  * Management
  * [User Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.6/modules/admin-portal/pages/management/user-management.adoc)
### Contents
  * [My Profile](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_my_profile)
  * [Secret Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_secret_management)
  * [All Users](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_all_users)
  * [Proxy groups](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_proxy_groups)
  * [User-defined roles](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_user_defined_roles)
  * [Create a user-defined role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_create_a_user_defined_role)
  * [Edit a user-defined role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_edit_a_user_defined_role)
  * [Drop a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_drop_a_role)
  * [Role management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_role_management)
  * [Select a graph](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_graph)
  * [Select a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_role)
  * [View role details](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_view_role_details)
  * [Settings for user view](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_settings_for_user_view)
  * [Grant/revoke a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_grantrevoke_a_role)


# User Management
### Contents
  * [My Profile](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_my_profile)
  * [Secret Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_secret_management)
  * [All Users](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_all_users)
  * [Proxy groups](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_proxy_groups)
  * [User-defined roles](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_user_defined_roles)
  * [Create a user-defined role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_create_a_user_defined_role)
  * [Edit a user-defined role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_edit_a_user_defined_role)
  * [Drop a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_drop_a_role)
  * [Role management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_role_management)
  * [Select a graph](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_graph)
  * [Select a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_role)
  * [View role details](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_view_role_details)
  * [Settings for user view](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_settings_for_user_view)
  * [Grant/revoke a role](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_grantrevoke_a_role)


The User Management page has three tabs: My Profile, All Users and Role Management.
## [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_my_profile)My Profile
All users can access the My Profile tab to manage their own credentials.
![my profile updated](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/my-profile-updated.png)
To change your password, click the key icon ![key](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/key.png) in the Password card at the top.
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_secret_management)Secret Management
Below the cards is the secret management section, where you can create and delete secrets, which are unique strings that can be used to generate authorization tokens. An alias is required for each secret.
You can create as many secrets for each graph as you want, but remember to copy the secret value and save it at a secure location when you generate a secret. Once you refresh the page or go to another page and come back, the actual secret value will be masked for security.
![secret management](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/secret-management.png)
With token authentication enabled, use the secrets to request tokens and add the tokens in the HTTP request headers to call TigerGraph REST endpoints. Read more at: [User Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/).
## [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_all_users)All Users
The All Users tab displays information on all users. Only users with user or proxy groups management permission can access this tab. Users with user management permissions (`READ_USER` and `WRITE_USER` privileges) can:
  * add new users
  * change passwords for other users
  * delete users


Users with proxy groups management permission (`READ_PROXYGROUP`, `WRITE_PROXYGROUP` privileges) can:
  * create proxy groups
  * change proxy rules
  * delete proxy groups


To see a list of all privileges, see [List of Privileges](https://docs.tigergraph.com/tigergraph-server/4.2/reference/list-of-privileges).
![all users updated](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/all-users-updated.png)
Both native users and proxy users are displayed in the User section. However, you can only change the password for native users.  
---  
Click **+ Add User** to add new users:
![Add new user pop-up](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/all-users%20\(1\).png)
Click ![change others password btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/change-others-password-btn.png) to edit another user’s username and password.
Click ![delete btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/delete_btn.png) to delete a user.
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_proxy_groups)Proxy groups
Click the Proxy Group tab at the left to see all proxy groups:
![proxy groups](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/proxy-groups.png)
Click **+ Add Group** to add new proxy groups:
![add proxy group](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/add-proxy-group.png)
Click ![edit](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/edit.png) to edit the proxy rule of an existing proxy group.
Click ![delete btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/delete_btn.png) to delete a proxy group.
Read more about proxy groups at [User Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/).
## [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_user_defined_roles)User-defined roles
The _User-defined roles_ tab lists all user-defined roles and allows users with sufficient privileges to create roles. Users must have the `READ_ROLE` privilege on at least one graph to access this tab. This section describes the procedures to create, edit, and drop roles, as well as assign roles to users in GraphStudio. To learn more about roles and privileges in TigerGraph’s role-based access control system, see [User Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/).
To create/edit/delete a role, a user must also have `WRITE_ROLE` privilege on that graph. See more details in [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/access-control-model).
All user-defined roles that you can view appear in a table:
![user defined roles](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/user-defined-roles.png)
Each row shows one role along with the privileges it contains. For global roles, all privileges on either global level or a specific graph will be listed.
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_create_a_user_defined_role)Create a user-defined role
Click **+ Create role** at the right upper corner to create a role. You can create a global or a local role on a graph.
A global role can be granted privileges on any graph or globally. A local role is limited to one specific graph.
#### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_create_a_global_role)Create a global role
Select ![global ratio btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/global-ratio-btn.png) to start creating a global role. The first panel is for the global privileges, where you can select global level privileges to assign to this role.
![create global role](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/create-global-role.png)
Click **+ Grant privileges on another graph** at the bottom of the pop-up window to open the same interface with the ability to create privileges for a different graph.
#### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_create_a_local_role)Create a local role
Select ![local ratio btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/local-ratio-btn.png) to start creating a local role. Select a graph in the dropdown that you want to create the role on.
![create local role](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/create-local-role.png)
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_edit_a_user_defined_role)Edit a user-defined role
Click ![edit](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/edit.png) to open the edit pop-up. Deselect a privilege to drop it from the role and select one to add it to the role. When editing a role, you cannot change a local role to a global role, or vice versa.
![edit global role](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/edit-global-role.png) ![edit local role](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/edit-local-role.png)
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_drop_a_role)Drop a role
Click ![delete btn](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/delete_btn.png) to drop a role.
## [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_role_management)Role management
In the _Role Management_ tab, users can view the role assignment of users, assign roles to users, and revoke roles from users. Users must have the `READ_ROLE` privilege along with the `READ_USER` or `READ_PROXYGROUP` privilege on at least one graph to access this tab.
Admin Portal does not indicate whether a user belongs a proxy group. You can find out more from GSQL client. Admin Portal shows a combination of roles for proxy users. Proxy user which belongs to a proxy group inherits all the roles from the proxy group plus all the roles the proxy user has. Therefore, if you want to revoke a role from a proxy user, you need to revoke the role from the proxy group first. Then you might need to revoke the same role from the proxy user if the proxy user also has that role.  
---  
To assign roles, users need to have the `WRITE_ROLE` privilege. If you only have the `READ_ROLE` privilege, you can view the current assignment but cannot modify it.
![role management](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/role-management.png)
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_graph)Select a graph
You can use the dropdown menu in the top left corner to select on which graph you want to assign different roles to different users. Choose `global` to assign global roles or a specific graph to assign local roles.
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_select_a_role)Select a role
You can use the second dropdown menu to select a role that you want to assign to different users.
With `global` selected, you can assign all global built-in or user-defined roles. With a specific graph selected, you can assign all local built-in roles or local user-defined roles within that graph.   
---  
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_view_role_details)View role details
Next to the dropdowns, click the **View role details** button to view the information on the selected role.
![role detail](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/role-detail.png)
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_settings_for_user_view)Settings for user view
In the Settings dropdown, you can sort the users in alphabetic order or by name length.
You can also choose to show all users, show the users who have the role, or show only the users who don’t have the role.
### [](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management#_grantrevoke_a_role)Grant/revoke a role
On a small screen, you need to click **Manage** to open the assignment panel.   
---  
Once you’ve selected a graph and a role, all users will be listed with a checkbox. You can check the box next to the user to grant the role, or uncheck to revoke the role.
![user assignment](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/user-assignment.png)
After modifying your assignment, click **SAVE** to save your changes. You can also discard your changes with the **DISCARD** button.
Click the proxy group button to switch to proxy groups and manage their roles.
![manage groups](https://docs.tigergraph.com/gui/3.6/admin-portal/_images/manage-groups.png)
If you have made changes to users through GSQL after opening the user management page, click the refresh button in the top right corner to reflect the changes in Admin Portal.  
---  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


